Updated Validation Notebook
Updated to give more meaningful summaries

--- a/Fingerprint_validation.ipynb
+++ b/Fingerprint_validation.ipynb
@@ -668,6 +668,448 @@
     "    display(styled_df)\n",
     "    print(f\"Fingerprint Data for file{num}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "731338f9-54fe-409b-bb7d-ea5db3b845c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error loading file based on extension: error parsing attribute name, line 2, column 18 (<string>, line 2)\n",
+      "Error loading file based on extension: error parsing attribute name, line 2, column 18 (<string>, line 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Test Name</th>\n",
+       "      <th>.csv</th>\n",
+       "      <th>.xlsx</th>\n",
+       "      <th>.json</th>\n",
+       "      <th>.xml</th>\n",
+       "      <th>.html</th>\n",
+       "      <th>.h5</th>\n",
+       "      <th>.dta</th>\n",
+       "      <th>.feather</th>\n",
+       "      <th>.parquet</th>\n",
+       "      <th>.pkl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Standard csv</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>European format csv</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mixed Formats csv</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>csv with missing Data</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>csv without header and unusual delimiter</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "      <td>Validated</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Test Name       .csv              .xlsx  \\\n",
+       "0                              Standard csv  Validated          Validated   \n",
+       "1                       European format csv  Validated          Validated   \n",
+       "2                         Mixed Formats csv  Validated  Failed Validation   \n",
+       "3                     csv with missing Data  Validated          Validated   \n",
+       "4  csv without header and unusual delimiter  Validated          Validated   \n",
+       "\n",
+       "       .json               .xml              .html                .h5  \\\n",
+       "0  Validated          Validated          Validated  Failed Validation   \n",
+       "1  Validated          Validated          Validated          Validated   \n",
+       "2  Validated          Validated  Failed Validation          Validated   \n",
+       "3  Validated          Validated          Validated  Failed Validation   \n",
+       "4  Validated  Failed Validation          Validated          Validated   \n",
+       "\n",
+       "                .dta           .feather           .parquet               .pkl  \n",
+       "0  Failed Validation  Failed Validation  Failed Validation  Failed Validation  \n",
+       "1          Validated          Validated          Validated          Validated  \n",
+       "2          Validated          Validated          Validated          Validated  \n",
+       "3  Failed Validation  Failed Validation  Failed Validation  Failed Validation  \n",
+       "4          Validated          Validated          Validated          Validated  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import warnings\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# List of numbers\n",
+    "nums = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "# Test names based on file number\n",
+    "test_names = {\n",
+    "    1: \"Standard csv\",\n",
+    "    2: \"European format csv\",\n",
+    "    3: \"Mixed Formats csv\",\n",
+    "    4: \"csv with missing Data\",\n",
+    "    5: \"csv without header and unusual delimiter\"\n",
+    "}\n",
+    "\n",
+    "# Directory where the validation files are located\n",
+    "file_directory = \"validation_files/\"\n",
+    "\n",
+    "# Function to apply conditional formatting\n",
+    "def highlight_status(val):\n",
+    "    color = 'green' if val == 'Pass' else 'red'\n",
+    "    return f'color: {color}'\n",
+    "\n",
+    "# Function to extract the file extension\n",
+    "def get_file_extension(file_path):\n",
+    "    return os.path.splitext(file_path)[1]\n",
+    "\n",
+    "# List to collect the final validation status for each file type\n",
+    "validation_summary = []\n",
+    "\n",
+    "# Loop through each number and validate files\n",
+    "for num in nums:\n",
+    "    # Generate file paths for the current num in the specified directory\n",
+    "    file_paths = [\n",
+    "        os.path.join(file_directory, f\"file{num}.csv\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.xlsx\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.json\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.xml\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.html\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.h5\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.dta\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.feather\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.parquet\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.pkl\")\n",
+    "    ]\n",
+    "\n",
+    "    # Dictionary to store the validation status for each file extension\n",
+    "    file_validation = {}\n",
+    "\n",
+    "    # Variables to store the first entry of the .csv fingerprints\n",
+    "    first_csv_dep_fingerprint = None\n",
+    "    first_csv_indep_fingerprint = None\n",
+    "\n",
+    "    # Loop through each file and store fingerprints in a list\n",
+    "    for file_path in file_paths:\n",
+    "        fingerprint_dep, fingerprint_indep = generate_fingerprints(file_path, data_fingerprint)\n",
+    "\n",
+    "        # If it's the .csv file, store its first entry fingerprints\n",
+    "        if file_path.endswith(\".csv\"):\n",
+    "            if first_csv_dep_fingerprint is None:\n",
+    "                first_csv_dep_fingerprint = fingerprint_dep\n",
+    "                first_csv_indep_fingerprint = fingerprint_indep\n",
+    "\n",
+    "        # Compare the current fingerprints with the first .csv file fingerprints\n",
+    "        dep_status = \"Pass\" if fingerprint_dep == first_csv_dep_fingerprint else \"Fail\"\n",
+    "        indep_status = \"Pass\" if fingerprint_indep == first_csv_indep_fingerprint else \"Fail\"\n",
+    "\n",
+    "        # Extract file extension for the validation summary\n",
+    "        file_extension = get_file_extension(file_path)\n",
+    "\n",
+    "        # Set initial validation status to \"Validated\", and change to \"Failed Validation\" if any test fails\n",
+    "        if dep_status == \"Fail\" or indep_status == \"Fail\":\n",
+    "            file_validation[file_extension] = \"Failed Validation\"\n",
+    "        elif file_extension not in file_validation:  # Only set to \"Validated\" if not already failed\n",
+    "            file_validation[file_extension] = \"Validated\"\n",
+    "\n",
+    "    # Append the validation result for this test to the summary\n",
+    "    validation_summary.append({\n",
+    "        'Test Name': test_names[num],\n",
+    "        **file_validation  # Add all file extensions and their validation statuses\n",
+    "    })\n",
+    "\n",
+    "# Convert the list of validation statuses to a summary DataFrame\n",
+    "df_validation_summary = pd.DataFrame(validation_summary)\n",
+    "\n",
+    "# Display the summary table in Jupyter\n",
+    "display(df_validation_summary)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9a5046de-45a5-44f6-a74e-d1cacf9f65ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error loading file based on extension: error parsing attribute name, line 2, column 18 (<string>, line 2)\n",
+      "Error loading file based on extension: error parsing attribute name, line 2, column 18 (<string>, line 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>File Format</th>\n",
+       "      <th>Validation Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>.csv</td>\n",
+       "      <td>Validated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>.xlsx</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>.json</td>\n",
+       "      <td>Validated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>.xml</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>.html</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>.h5</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>.dta</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>.feather</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>.parquet</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>.pkl</td>\n",
+       "      <td>Failed Validation</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  File Format  Validation Status\n",
+       "0        .csv          Validated\n",
+       "1       .xlsx  Failed Validation\n",
+       "2       .json          Validated\n",
+       "3        .xml  Failed Validation\n",
+       "4       .html  Failed Validation\n",
+       "5         .h5  Failed Validation\n",
+       "6        .dta  Failed Validation\n",
+       "7    .feather  Failed Validation\n",
+       "8    .parquet  Failed Validation\n",
+       "9        .pkl  Failed Validation"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import warnings\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# List of numbers (representing the tests)\n",
+    "nums = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "# Test names based on file number\n",
+    "test_names = {\n",
+    "    1: \"Standard csv\",\n",
+    "    2: \"European format csv\",\n",
+    "    3: \"Mixed Formats csv\",\n",
+    "    4: \"csv with missing Data\",\n",
+    "    5: \"csv without header and unusual delimiter\"\n",
+    "}\n",
+    "\n",
+    "# Directory where the validation files are located\n",
+    "file_directory = \"validation_files/\"\n",
+    "\n",
+    "# Function to extract the file extension\n",
+    "def get_file_extension(file_path):\n",
+    "    return os.path.splitext(file_path)[1]\n",
+    "\n",
+    "# List to collect validation statuses for each test and file type\n",
+    "validation_data = {ext: [] for ext in ['.csv', '.xlsx', '.json', '.xml', '.html', '.h5', '.dta', '.feather', '.parquet', '.pkl']}\n",
+    "\n",
+    "# Loop through each test (number) and validate files\n",
+    "for num in nums:\n",
+    "    # Generate file paths for the current num in the specified directory\n",
+    "    file_paths = [\n",
+    "        os.path.join(file_directory, f\"file{num}.csv\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.xlsx\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.json\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.xml\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.html\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.h5\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.dta\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.feather\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.parquet\"),\n",
+    "        os.path.join(file_directory, f\"file{num}.csvoutput.pkl\")\n",
+    "    ]\n",
+    "\n",
+    "    # Variables to store the first entry of the .csv fingerprints\n",
+    "    first_csv_dep_fingerprint = None\n",
+    "    first_csv_indep_fingerprint = None\n",
+    "\n",
+    "    # Loop through each file and store validation results\n",
+    "    for file_path in file_paths:\n",
+    "        fingerprint_dep, fingerprint_indep = generate_fingerprints(file_path, data_fingerprint)\n",
+    "\n",
+    "        # If it's the .csv file, store its first entry fingerprints\n",
+    "        if file_path.endswith(\".csv\"):\n",
+    "            if first_csv_dep_fingerprint is None:\n",
+    "                first_csv_dep_fingerprint = fingerprint_dep\n",
+    "                first_csv_indep_fingerprint = fingerprint_indep\n",
+    "\n",
+    "        # Compare the current fingerprints with the first .csv file fingerprints\n",
+    "        dep_status = \"Pass\" if fingerprint_dep == first_csv_dep_fingerprint else \"Fail\"\n",
+    "        indep_status = \"Pass\" if fingerprint_indep == first_csv_indep_fingerprint else \"Fail\"\n",
+    "\n",
+    "        # Extract file extension for validation summary\n",
+    "        file_extension = get_file_extension(file_path)\n",
+    "\n",
+    "        # Append 'Pass' or 'Fail' to the validation data for the current test\n",
+    "        if dep_status == \"Fail\" or indep_status == \"Fail\":\n",
+    "            validation_data[file_extension].append(\"Fail\")\n",
+    "        else:\n",
+    "            validation_data[file_extension].append(\"Pass\")\n",
+    "\n",
+    "# Now create the final summary table where a format is \"Validated\" only if all tests are \"Pass\"\n",
+    "summary = []\n",
+    "\n",
+    "# Check each file format across all tests\n",
+    "for file_format, results in validation_data.items():\n",
+    "    status = \"Validated\" if all(result == \"Pass\" for result in results) else \"Failed Validation\"\n",
+    "    summary.append({'File Format': file_format, 'Validation Status': status})\n",
+    "\n",
+    "# Convert the summary to a DataFrame\n",
+    "df_summary = pd.DataFrame(summary)\n",
+    "\n",
+    "# Display the final simplified validation summary table\n",
+    "display(df_summary)\n"
+   ]
   }
  ],
  "metadata": {
